# monday-brief

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  maintainer_context.md  pyproject.toml
docs/: plan.md  style-guide.md
docs/planning/2026-S01/: bl-10-05--10-05-2026.md
scripts/: verify_fetch.py  verify_provider.py
src/issue_triage/: __init__.py  __main__.py  config.py  github.py  models.py  pipeline.py  render.py
src/issue_triage/prompts/: categorise.md  new_activity.md  prioritise.md  summarise.md  themes.md
src/issue_triage/providers/: __init__.py  gemini.py  ollama.py
